1998-08-31  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Put in a bunch of edits.

1998-08-24  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Added initial vi section and a lame
	quickie on regular expressions, based on LDP guide. Entered more
	edits from the red-pen fest. Switched to LaTeX output.

1998-08-17  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: More edits.

1998-08-16  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Added Troubleshooting, deleted Terminals,
	moved Shells chapter ahead of More on Files, entered some of my
	copy edits but most are still pending.

Sun Aug  2 00:31:29 1998  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: short paragraphs on parent/child 
	processes. minor fixes.

Tue Jul 28 21:29:10 1998  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Added to the help section, first 
	section of text files chapter, a few cosmetic details.

Mon Jul 27 22:29:37 1998  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Worked on initial shells section.

Sun Jul 26 22:58:45 1998  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Section on .xsession. Other small things.
	Seem to have discovered a segfault bug in debiandoc2ps.

Thu Jul 23 23:24:52 1998  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: A few minor edits, and a few short 
	paragraphs about the use of dpkg.

Sun Jul  5 01:44:32 1998  Havoc Pennington  <hp@pobox.com>

	* debian-tutorial.sgml: Incorporated RMS's comments. Enhanced and
 	rearranged the Basic Files and X chapters. Various small changes.
	* .cvsignore: new file
	
Sat Jul  4 19:15:09 1998  Havoc Pennington  <hp@pobox.com>

	* Makefile: Added targets for compressed text and postscript.

Sat Jul  4 18:44:28 1998  Havoc Pennington  <hp@pobox.com>

	* COPYING: Fixed spelling error.
	* AUTHOR-INFO: Added note about keystroke notation.
	* debian-tutorial.sgml: Added contributors. Added copyright