@@ -5,14 +5,6 @@
 
       <version><date>
 
-      <abstract> This is the Debian Tutorial. You should read it after
-	you install Debian according to the instructions in
-	<tt>install.txt</tt> and do the basic configuration covered in
-	the Installation Manual (which has not been written at this
-	time; apologies and please bear with us). It covers all the
-	basics of using your new system in an introductory/tutorial
-	format.
-
       <copyright> &copy; 1998 Software in the Public Interest and 
 	  individual contributors. 
 
@@ -140,8 +132,8 @@
 	  (probably over 1000) programmers worldwide. A large part of
 	  the basic tools that fill out the operating system come from
 	  the (<url id="http://www.gnu.org" name="GNU project">), and
-	  these tools are also free. Of course, the thing that people
-	  want is application software. Programs to help them get what
+	  these tools are also free. Of course, what people
+	  want is application software: programs to help them get what
 	  they want to do done, from editing documents to running a
 	  business to playing games to writing more software. Debian
 	  comes with over 1000 <em>packages</em> (precompiled software
@@ -159,82 +151,45 @@
 	<sect1 id="introduction-debian-os">What's an operating system,
 	    and what sort of operating system is Debian?
 
-	<p>An operating system is a collection of programs that make
-	    your computer useful. It's the software system that
-	    allows you to create and organize files, communicate over
-	    the network, coexist with other users on the system, and
-	    do your work. 
+	  <p>An operating system is the set of basic programs and
+	    utilities that makes your computer run. 
 
 	  <p>Debian GNU/Linux is based on the Unix operating system,
-	    defined by the Posix and X/Open specifications. Unix has a
-	    long history (see <ref id="unix-history">). Debian is
-	    almost fully compliant with these standards, though the
-	    certification process costs a significant amount of money
-	    so it is not officially certified.
+	    which has a long history (see <ref
+	    id="unix-history">). Debian is basically compatible with
+	    Unix, but adds a significant number of additional
+	    features.
 
-	  <p>Operating systems can be simple and minimalist, like DOS,
-	    or big and complex, like OS/2 or VMS.  Debian tries to be
-	    a middle ground.  While it supplies more resources and
-	    does more than early operating systems, it doesn't try to
-	    do <em>everything</em>.  Unix was originally designed as a
-	    simplification of an operating system named Multics (note
-	    the pun: Multics, Unix).
-
-	  <p>The original design philosophy for Unix was to distribute
-	    functionality into small parts, the programs. That way,
-	    you can easily achieve new functionality and new features
-	    by combining the small parts (programs) in new ways. And
-	    if new utilities appear (and they do), you can integrate
-	    them into your old toolbox.  
-
-	  <p>To write a document like this one, for example, one might
-	    use many programs actively: one to create and manage
-	    windows on the screen, a text editor to type in the
-	    document, a typesetting program to format it, a previewer
-	    to view the typeset document, another program to convert
-	    it to PostScript for printing and finally a utility to
-	    print it.  If a new improved previewer became available, I
-	    could use that without changing my other programs.
-	      
-
-	  <p>At any given time, the system could be running dozens of
-	    programs to support a single user. With enough users,
-	    you'd expect hundreds of programs to be active.  Of
-	    course, most of these are started automatically by the
-	    system, so you don't have to worry about them.
+	  <p>The design philosophy of GNU/Linux (and Unix) is to
+	    distribute its functionality into small, multipurpose
+	    parts. That way, you can easily achieve new functionality
+	    and new features by combining the small parts (programs)
+	    in new ways. Debian is like an erector set; you can build
+	    all sorts of things with it.
 
 	  <p>When you're using an operating system, you want to
 	    minimize the amount of work you put into getting your job
 	    done.  Debian supplies many tools that can help you, but
 	    only if you know what these tools do.  Spending an hour
 	    trying to get something to work and then finally giving up
-	    isn't very productive.  This manual will teach you what
-	    tools to use in what situations, and how to tie these
-	    various tools together.
-
-	  <p>The central part of an operating system is called the
-	    <em>kernel</em>.  The Linux kernel is a program which
-	    coordinates the other programs, distributing resources
-	    among them and providing basic services such as files and
-	    networking for programs to use.  A kernel is always
-	    running: it is the first program to start when the system
-	    is turned on, and the last program to do anything when the
-	    system is halted.
+	    isn't very productive.  This manual will teach you about
+	    the core tools that make up Debian: what tools to use in
+	    what situations, and how to tie these various tools
+	    together.
 	    
 	<sect1 id="introduction-debian-how"> Who creates Debian?
 
-	  <p>Debian is an all-volunteer internet development
-	    project. There are hundreds of volunteers producing the
-	    distribution; most volunteers are in charge of a small
-	    number of software packages. In general, volunteers are
-	    intimately familiar with the software they package, and
-	    use it themselves in their work.
+	  <p> Debian is an all-volunteer internet development
+	    project. There are hundreds of volunteers working on
+	    it. Most are in charge of a small number of software
+	    packages and are intimately familiar with the software
+	    they package.
 
 	  <p>These volunteers work together by following a strict set
-	    of guidelines governing how packages are assembled.  These
-	    guidelines are developed cooperatively, by discussing how
-	    the system as a whole should work on internet mailing
-	    lists and <em>internet relay chat</em> (IRC) forums.
+	    of guidelines governing how packages are assembled. These
+	    guidelines are developed cooperatively in discussions on
+	    internet mailing lists and <em>internet relay chat</em>
+	    (IRC) forums.
 	    
 	</sect1>
 
@@ -329,27 +284,6 @@
       <sect id="introduction-why"> Why should I use Debian? 
 
 	<p>What Debian is good for, and what it isn't good for. 
-
-      <sect id="introduction-easy"> Is Debian easy to use?
-
-	<p>The common wisdom about Debian and other Unix-like systems
-	  is that they're hard to use. So you may be a little
-	  worried. Don't be.
-
-	<p>Yes, you have to type some commands, where you'd use the
-	  mouse on some other systems (at least for now ---
-	  development of a free graphical desktop is moving quickly,
-	  see <url id="www.gnome.org" name="the Gnome project web
-	  page"> for details). But keep an open mind --- commands can
-	  often be easier to learn and use than the mouse. It depends
-	  on what you're trying to do.
-
-	<p>Don't be intimidated. Take your time, try things out, read
-	  the documentation. If you have any questions, ask them (see
-	  <ref id="docs-support">). Familiarize yourself with the
-	  system <em>before</em> that critical deadline, so you can
-	  learn at an enjoyable pace without frustration. Soon you'll
-	  be doing real work quickly and easily.
 	  
       <sect id="introduction-how">How to Read This Book
 
@@ -397,8 +331,8 @@
 
       <p> As a part of the install process, you should have figured
 	out how to boot the Debian system (with a special floppy disk,
-	by simply turning your computer on, or by holding down the Alt
-	key at the LILO prompt and selecting the Linux kernel image).
+	by simply turning your computer on, or by holding down the
+	<tt>Alt</tt> key at the LILO prompt and selecting Linux).
 
       <sect id="start-multi"> A multiuser, multitasking operating
 	  system
@@ -1295,7 +1229,7 @@ man whoami
 	  and see what they're up to. Your primary tool for this is
 	  the <em>shell</em>.
 
-      <sect id="basics-shell"> What's the shell 
+      <sect id="basics-shell"> The shell 
 
         <p>The <em>shell</em> is a program that allows you to interact
 	  with your computer.  It's called a shell because it provides
@@ -1327,7 +1261,7 @@ man whoami
 	  include the Bourne Again Shell from the GNU project
 	  (<tt>bash</tt>, the Debian default), the Korn shell
 	  (<prgn>ksh</prgn>), and the Z shell
-	  (<prgn>zsh</prgn>). There is also <prgn>ash</prgn>, a very
+	  (<prgn>zsh</prgn>). There is also <prgn>ash</prgn>, a
 	  traditionalist implementation of the Bourne shell. The most
 	  common C shell variant is <prgn>tcsh</prgn> (the <tt>t</tt>
 	  pays tribute to the TENEX and TOPS-20 operating systems,
@@ -1535,6 +1469,8 @@ DESCRIPTION
 	    unique, and press <tt>TAB</tt> again. If it finds no
 	    completions, it will simply beep.
 
+	<sect1> More features? If not then eliminate this section.
+
       <sect id="basics-identity"> Managing your identity
 	  
 	<p>Unix-like systems are multiuser, and so you have your own
@@ -1610,10 +1546,10 @@ DESCRIPTION
 	  </list>
 	  
 	<p>The confusing variety of documentation sources exists for
-	  many reasons. <tt>info</tt> is supposed to replace
-	  <tt>man</tt>, but <tt>man</tt> hasn't disappeared yet, for
-	  example. However, it's nice to know that so much
-	  documentation exists!
+	  many reasons. For example, <tt>info</tt> is supposed to
+	  replace <tt>man</tt>, but <tt>man</tt> hasn't disappeared
+	  yet. However, it's nice to know that so much documentation
+	  exists!
 
 	<p>So where to look for help? Here are some suggestions:
 	  <list>
@@ -1791,16 +1727,151 @@ DESCRIPTION
 	  Kill works on the PID.
 
       <sect id="shell-variables"> Environment variables
-
-	<p>What they are, how they're inherited. Setting them. 
-	  Maybe PAGER as an example, or changing the prompt
-
-	<p>Every process on a Debian system has an <em>environment</em>
-	  in which it runs. 
 	  
-	<sect1 id="shell-variables-parents">
+	<p>Every process has an <em>environment</em> associated with
+	  it. An environment is a collection of <em>environment
+	  variables</em>. A variable is a changeable value with a
+	  fixed name. For example, the name <tt>EMAIL</tt> could refer
+	  to the value <tt>joe@nowhere.com</tt>. The value can vary
+	  --- <tt>EMAIL</tt> could also refer to
+	  <tt>jane@somewhere.com</tt>.
 
-	  FIXME what to do with this section
+	<p>Since your shell is a process like any other, it has an
+	  environment. You can view your shell's environment by
+	  entering the <tt>printenv</tt> command. Here's some example
+	  output:
+
+	<p>
+
+<example>
+PAGER=less
+HOSTNAME=icon
+MAILCHECK=60
+MOZILLA_HOME=/usr/local/lib/netscape
+PS1=$ 
+USER=hp
+MACHTYPE=i486-pc-linux-gnu
+EDITOR=jed
+DISPLAY=:0.0
+LOGNAME=hp
+EMAIL=hp@pobox.com
+SHELL=/bin/bash
+HOSTTYPE=i486
+OSTYPE=linux-gnu
+HISTSIZE=150
+HOME=/home/hp
+TERM=xterm-debian
+TEXEDIT=jed
+PATH=/home/hp/local/bin:/usr/sbin:/home/hp/.bin:/home/hp/local/bin:/usr/sbin:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games:.
+_=/usr/bin/printenv
+</example>
+
+	<p>On your system, the output will be different, but similar.
+
+	<p>Environment variables are one way to configure the
+	  system. For example, the <tt>EDITOR</tt> variable lets you
+	  select your preferred editor for posting news, writing
+	  email, and so on. The <tt>HISTSIZE</tt> variable tells Bash
+	  how many command lines to keep in its history; you can
+	  return to that many command lines with the up arrow key.
+
+	<p>Setting environment variables is simple. Once you learn
+	  how, you'll probably want to set them automatically whenever
+	  you log on; see <ref id="custom_shell"> for instructions.
+
+	<p>For practice, try customizing your shell's prompt and your
+	  text file viewer with environment variables:
+	  
+	<p><enumlist>
+
+	    <item><tt>man less</tt> <p> View the online manual for the
+		<tt>less</tt> command. In order to show you the text
+		one screenful at a time, <tt>man</tt> invokes a
+		<em>pager</em> which shows you a new page of text each
+		time you press the space bar. By default, it uses the
+		pager called <tt>more</tt>. 
+
+	      <p>Go ahead and glance over the man page for
+		<tt>less</tt>, which is an enhanced pager. Scroll to a
+		new page by pressing space; press <tt>q</tt> to
+		quit. <tt>more</tt> will also quit automatically when
+		you reach the end of the man page.
+
+	    <item><tt>export PAGER=less</tt><p>After reading about
+		the advantages of <tt>less</tt>, you might want to use
+		it to read man pages. To do this, you set the
+		environment variable <tt>PAGER</tt>. 
+
+	      <p>The command to set an environment variable always
+		has this format: <tt>export
+		  <var>NAME</var>=<var>value</var></tt>.
+		
+	      <p> <tt>export</tt> means to move the variable from the
+		shell into the environment. This means that programs
+		other than the shell will be able to access it.
+
+	    <item><tt>echo $PAGER</tt> <p> This is the easiest way to
+		see the value of a variable. <tt>$PAGER</tt> tells the
+		shell to insert the value of the <tt>PAGER</tt>
+		variable <em>before</em> invoking the
+		command. <tt>echo</tt> echoes back its argument: in
+		this case, the it echoes the current <tt>PAGER</tt>
+		value, <tt>less</tt>.
+
+	    <item><tt>man more</tt> <p> Read the <tt>more</tt>
+		manual. This time, <tt>man</tt> should have invoked the
+		<tt>less</tt> pager. 
+
+	      <p><tt>less</tt> has lots of features <tt>more</tt>
+		lacks. For example, you can scroll backward with the
+		<tt>b</tt> key. You can also move up and down (even
+		sideways) with the arrow keys. <tt>less</tt> won't
+		exit when it reaches the end of the man page; it will
+		wait for you to press <tt>q</tt>.
+
+	    <item><tt>PAGER=more man more</tt> <p> If you want a
+		different setting temporarily, you can put a new value
+		in effect for the current command line only. Put the
+		<tt><var>NAME</var>=<var>value</var></tt> at the start
+		of the command line, followed by the command to
+		execute. Be sure to omit <tt>export</tt>.
+
+	      <p>You can try out some <tt>less</tt>-specific commands,
+		like <tt>b</tt>, to verify that they don't work with
+		<tt>more</tt> and you are indeed using <tt>more</tt>.
+
+	    <item><tt>echo $PAGER</tt> <p> The value of <tt>PAGER</tt>
+		should still be <tt>less</tt>; the above setting was
+		only temporary.
+
+	    <item><tt>unset PAGER</tt> <p>If you don't want to specify
+		a pager anymore, you can <tt>unset</tt> the
+		variable. <tt>man</tt> will then use <tt>more</tt> by
+		default, just as it did before you set the variable.
+		
+	    <item><tt>echo $PAGER</tt> <p>Since <tt>PAGER</tt> has
+		been unset, <tt>echo</tt> won't print anything.
+
+	    <item><tt>PS1=hello:</tt> <p> Just for fun, change your
+		shell prompt. <tt>$</tt> should become
+		<tt>hello:</tt>. 
+
+	      <p><tt>export</tt> is not necessary, because we're
+		changing the shell's own behavior. There's no reason
+		to export the variable into the environment for other
+		programs to see. Technically, <tt>PS1</tt> is a
+		<em>shell variable</em> rather than an environment
+		variable.
+
+	      <p>If you wanted to, you could <tt>export</tt> the shell
+		variable, transforming it into an environment
+		variable. Then other programs could see it:
+		specifically, the <em>children</em> of the current
+		shell process. The next section explains this.
+
+	  </enumlist>
+	  
+	<sect1 id="shell-variables-parents"> Parent and child processes
 
 	  <p>All processes come from an earlier process, called
 	    their <em>parent process</em>. 
@@ -1844,23 +1915,114 @@ $
 	    (<tt>ps f</tt>) and shell 19682 has child process 15973
 	    (<tt>man ps</tt>).  <tt>man ps</tt> has in turn invoked a
 	    complex set of subprocesses in order to display a man
-	    page.
+	    page. Don't worry about what these subprocesses do for
+	    now.
 	    
-	  <p> Parents and children have a complex relationship. In
-	    general, when a parent dies the child will die as well. So
-	    you can kill a whole set of processes --- for example, all
-	    the <tt>man ps</tt> children in the above output
-	    --- by killing the parent process, 15973.
+	  <p> Parents and children have a complex relationship. Most
+	    of the time, when a parent dies the child will die as
+	    well. So you can kill a whole set of processes --- for
+	    example, all the <tt>man ps</tt> children in the above
+	    example --- by killing the parent process, 15973.
 
-	  <p> Children also inherit the <em>environment</em> of their
-	    parents --- the current working directory, and some
-	    special bits of data called <em>environment variables</em>.
+	  <p> Children inherit the environment variables of their
+	    parents, and some other attributes such as the current
+	    working directory.
 
-      <sect id="shell-path"> Where commands live
-	<p>builtins vs. program names, PATH, "type", "whereis", "which"
+	  <p> When a shell runs a command, it spawns the command as a
+	    child process. So the <tt>man</tt> command inherits the
+	    shell's environment; if you've set the <tt>PAGER</tt>
+	    variable, <tt>man</tt> will be able to see it. 
+
+	  <p>If you fail to <tt>export</tt> a variable, only the shell
+	    itself will see it, and it will not be passed on to
+	    children such as <tt>man</tt>.
+
+      <sect id="shell-path"> Where commands live: the <tt>PATH</tt>
+	  variable
+
+	<p>When you type a command into the shell, it has to find the
+	  program on your hard disk before executing it. If the shell
+	  had to look all over the disk, it would be very slow;
+	  instead, it looks in a list of directories contained in the
+	  <tt>PATH</tt> environment variable. This list of directories
+	  makes up the shells' <em>search path</em>; when you enter a
+	  command, it goes through each one in turn looking for the
+	  program you asked to run.
+
+	<p>You may need to change the <tt>PATH</tt> variable if you
+	  install programs yourself in a nonstandard location.
+
+	<p>The value of <tt>PATH</tt> is a colon-separated list of
+	  directories. The default value on Debian systems is:
 	  
+<example>
+/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games  
+</example>
+
+	<p>This value is defined in the file <tt>/etc/profile</tt> and
+	  applies to all users. You can easily change the value, just
+	  as you can change any environment variable.
+
+	<p>If you type the command <tt>ls</tt>, the shell will first
+	  look in <tt>/usr/local/bin</tt>; <tt>ls</tt> isn't there, so
+	  it will try <tt>/usr/bin</tt>; when that fails, it will
+	  check <tt>/bin</tt>. There it will discover
+	  <tt>/bin/ls</tt>, stop its search, and execute the program
+	  <tt>/bin/ls</tt>. If <tt>/usr/bin/X11/ls</tt> existed (it
+	  doesn't, but pretend), it would be ignored.
+
+	<p>You can see which <tt>ls</tt> the shell is going to use
+	  with the <tt>type</tt> command. <tt>type ls</tt> will give
+	  you the answer <tt>/bin/ls</tt> --- try it yourself.
+
+	<p>Try asking where <tt>type</tt> itself resides:
+
+<example>
+$ type type
+type is a shell builtin
+</example>
+
+	<p><tt>type</tt> isn't actually a program; it's a function
+	  provided by the shell. However, you use it just like an
+	  external program. 
+
+	<p>There are a number of commands like this; type <tt>man
+	    builtins</tt> to read the man page describing them. In
+	    general, you don't need to know whether a command is a
+	    builtin or a real program; however, builtins will not show
+	    up in the output of <tt>ps</tt> or <tt>top</tt> since they
+	    aren't separate processes. They're just part of the shell.
+
+
+      <sect id="custom_shell-aliases"> Aliases and shell functions
+	<p>How to make shortcuts
+
       <sect id="shell-io"> Controlling input and output
 	<p>Stdin, stdout, pipelines, and redirection
+
+	<p>Every process has at least three connections to the outside
+	  world. The <em>standard input</em> is one source of the
+	  process's data; the <em>standard output</em> is one place
+	  the process sends data; and the <em>standard error</em> is a
+	  place the process can send error messages. (These are often
+	  abbreviated <tt>stdin</tt>, <tt>stdout</tt>, and
+	  <tt>stderr</tt>.)
+	  
+	<p>The words `source' and `place' are intentionally
+	  vague. These standard input and ouput locations can be
+	  changed by the user; they could be the screen, the keyboard,
+	  a file, even a network connection. The user can specify
+	  which locations to use.
+
+	<p>When you run a program from the shell, usually standard
+	  input comes from your keyboard and standard output and error
+	  both go to your screen. However, you can ask the shell to
+	  change these defaults.
+
+	<p><enumlist>
+	    <item><tt></tt><p>
+
+	  </enumlist>
 
       <sect id="shell-modifiers"> Specifying how and when to run
 	commands <p>"modifiers" like batch, at, nohup, nice
@@ -3000,9 +3162,6 @@ rm: remove `myfile', overriding mode 0444?
 
     <chapt id="custom_shell"> <heading> Customizing the shell
     </heading>
-
-      <sect id="custom_shell-aliases"> aliases and shell functions
-	<p>How to make shortcuts
 
       <sect id="custom_shell-dotfiles"> .rc files and ls -a
 	<p>What they're for, why they're hidden, etc.
