@@ -1,3 +1,7 @@
+1998-09-04  Havoc Pennington  <hp@pobox.com>
+
+	* debian-tutorial.sgml: Edits; couple sections on the shell.
+
 1998-08-31  Havoc Pennington  <hp@pobox.com>
 
 	* debian-tutorial.sgml: Put in a bunch of edits.
